# aspartik

./: .gitignore  Cargo.toml  pyproject.toml  toolkit.nu
benches/: primate.py  smoke.py
crates/b3/: Cargo.toml  b3.py  config.hjson  pyproject.toml
crates/b3/b3/: __init__.py  _b3_rust_impl.pyi
crates/b3/b3/loggers/: _tree.py
crates/b3/b3/operators/: __init__.py  _delta_exchange.py  _node_slide.py  _param_scale.py  _tree_exchange.py  _tree_scale.py  _tree_slide.py
crates/b3/b3/priors/: coalescent.py
crates/b3/benches/: likelihood.rs  primate.py  smoke.py
crates/b3/python/: config.py  model.py  operator.py  primate.py  prior.py  smoke.py
crates/b3/python/b3/: __init__.py  _b3_rust_impl.pyi  tree.pyi
crates/b3/python/b3/operators/: __init__.py  _param_scale.py  _scale.py  _tree_exchange.py  _tree_scale.py  _tree_slide.py  _util.py
crates/b3/python/b3/priors/: __init__.py  _bound.py  _distribution.py  uniform.py
crates/b3/python/b3/substitutions/: __init__.py
crates/b3/src/: clock.rs  coalescent.rs  distribution.rs  lib.rs  likelihood.rs  log.rs  logger.rs  main.rs  mcmc.rs  mcmc2.rs  memo_vec.rs  model.rs  operator.rs  parameter.rs  prior.rs  py_parameter.rs  rng.rs  state.rs  substitution.rs  transitions.rs  tree.rs  util.rs
crates/b3/src/data/: dna.rs  mod.rs
crates/b3/src/likelihood/: cpu.rs  gpu.rs  likelihood.glsl  mod.rs  propose.glsl  reject.glsl  thread.rs
crates/b3/src/likelihood/gpu/: gpu.rs  mod.rs  propose.glsl  reject.glsl  stage.glsl
crates/b3/src/old_operator/: scheduler.rs
crates/b3/src/old_operator/param/: mod.rs
crates/b3/src/old_operator/tree/: exchange.rs  scale.rs  slide.rs
crates/b3/src/operator/: exchange.rs  mod.rs  scale.rs  scheduler.rs  slide.rs
crates/b3/src/operator/param/: scale.rs
crates/b3/src/operator/tree/: exchange.rs  mod.rs  scale.rs  slide.rs
crates/b3/src/parameter/: mod.rs
crates/b3/src/prior/: distribution.rs  mod.rs
crates/b3/src/probability/: compound.rs  mod.rs  poisson.rs  uniform.rs
crates/b3/src/state/: mod.rs
crates/base/: Cargo.toml
crates/base/src/: bases.rs  error.rs  lib.rs  newick.rs  seq.rs  substitution.rs  tree.rs
crates/base/src/substitution/: dna.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/data/: Cargo.toml
crates/data/src/: bases.rs  lib.rs  nucleotides.rs  seq.rs
crates/data/src/seq/: mod.rs  python.rs
crates/io/: Cargo.toml
crates/io/src/: fasta.rs  lib.rs  newick.rs
crates/io/src/fasta/: mod.rs  python.rs
crates/io/src/newick/: mod.rs  parse.rs  python.rs  serialize.rs
crates/linalg/: Cargo.toml
crates/linalg/src/: lapack.rs  lib.rs  math.rs  row_matrix.rs  vector.rs
crates/linalg/tests/: eigen.proptest-regressions  eigen.rs
crates/parsers/: Cargo.toml
crates/parsers/src/: lib.rs  newick.rs
crates/rng/: Cargo.toml  pyproject.toml
crates/rng/python/: smoke.py
crates/rng/python/rng/: __init__.py
crates/rng/rng/: __init__.py  librng.pyi
crates/rng/src/: lib.rs
crates/shchurvec/: Cargo.toml
crates/shchurvec/benches/: double.rs
crates/shchurvec/src/: bitvec.rs  debug.rs  eq.rs  lib.rs  serde.rs
crates/shchurvec/tests/: clone.rs  copy.rs  leak.rs  macro.rs
crates/skvec/src/: lib.rs
crates/skvec/tests/: leak.rs
crates/stats/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/stats/python/stats/: __init__.py  distributions.pyi
crates/stats/src/: euclid.rs  generate.rs  lib.rs  python_macros.rs
crates/stats/src/distribution/: bernoulli.rs  binomial.rs  chi_squared.rs  exponential.rs  gamma.rs  laplace.rs  levy.rs  log_normal.rs  mod.rs  poisson.rs  students_t.rs  uniform.rs  ziggurat.rs
crates/stats/src/function/: beta.rs  gamma.rs
crates/stats/stats/: __init__.py
crates/stats/tests/distributions/: gamma.py  poisson.py
crates/util/src/: lib.rs
python/aspartik/: _aspartik_rust_impl.pyi
python/aspartik/b3/: __init__.py  __init__.pyi  loggers.py
python/aspartik/b3/loggers/: __init__.py  _tree.py
python/aspartik/b3/operators/: __init__.py  _delta_exchange.py  _epoch_scale.py  _node_slide.py  _param_scale.py  _tree_exchange.py  _tree_scale.py  _util.py  _wilson_balding.py
python/aspartik/b3/priors/: __init__.py  _bound.py  _distribution.py  coalescent.py
python/aspartik/b3/substitutions/: __init__.py
python/aspartik/data/: __init__.py  __init__.pyi
python/aspartik/io/: fasta.pyi
python/aspartik/rng/: __init__.pyi
python/aspartik/stats/: distributions.py  distributions.pyi
src/: consts.rs  euclid.rs  generate.rs  lib.rs  prec.rs  python_macros.rs  statistics.rs  utils.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  cauchy.rs  chi.rs  chi_squared.rs  dirac.rs  discrete_uniform.rs  empirical.rs  erlang.rs  exponential.rs  fisher_snedecor.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  internal.rs  inverse_gamma.rs  laplace.rs  levy.rs  log_normal.rs  mod.rs  negative_binomial.rs  normal.rs  pareto.rs  poisson.rs  students_t.rs  triangular.rs  uniform.rs  weibull.rs  ziggurat.rs
src/function/: beta.rs  erf.rs  evaluate.rs  exponential.rs  factorial.rs  gamma.rs  harmonic.rs  logistic.rs
src/statistics/: iter_statistics.rs  mod.rs  order_statistics.rs  slice_statistics.rs  statistics.rs  traits.rs
src/stats_tests/: chisquare.rs  f_oneway.rs  fisher.rs  mannwhitneyu.rs  mod.rs  skewtest.rs  ttest_onesample.rs
tests/: distributions.rs
tests/distributions/: gamma.rs
