[package]
name = "statrs"
version = "0.18.0"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
edition = "2024"

[features]
default = ["std", "rand"]
std = ["rand?/std", "rand?/std_rng", "rand?/thread_rng"]
rand = ["dep:rand"]
python = ["std", "dep:pyo3"]

[dependencies]
approx = "0.5"
num-traits = "0.2"
pyo3 = { version = "0.24", optional = true }
rand = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
pyo3 = { version = "0.24", features = ["auto-initialize"] }
