[workspace]
members = [
	"crates/b3",
	"crates/data",
	"crates/io",
	"crates/linalg",
	"crates/rng",
	"crates/shchurvec",
	"crates/stats",
]

[package]
name = "bio"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Andrej Kolčin <self@kaathewise.net>"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Andrej Kolčin <self@kaathewise.net>"]

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = "1.22"
crossbeam-channel = "0.5"
divan = "0.1"
lapack-sys = "0.15"
nom = "8.0"
num-traits = "0.2"
petgraph = { version = "0.8", default-features = false }
proptest = "1.6"
pyo3 = "0.24"
rand = { version = "0.9", default-features = false }
rand_distr = "0.5"
rand_pcg = "0.9"
rayon = "1.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
vulkano = { version = "0.35", default-features = false }
vulkano-shaders = "0.35"

[profile.bench]
debug = true
