[workspace]
resolver = "2"
members = [
	"crates/b3",
	"crates/data",
	"crates/io",
	"crates/linalg",
	"crates/rng",
	"crates/skvec",
	"crates/stats",
	"crates/util",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Andrej Kolčin <self@kaathewise.net>"]
repository = "https://github.com/kaathewisegit/aspartik"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = "1.23"
divan = "0.1"
lapack-sys = "0.15"
nom = "8.0"
num-traits = "0.2"
parking_lot = "0.12"
petgraph = { version = "0.8", default-features = false }
proptest = "1.6"
pyo3 = "0.25"
rand = { version = "0.9", default-features = false }
rand_distr = "0.5"
rand_pcg = "0.9"
rayon = "1.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vulkano = { version = "0.35", default-features = false }
vulkano-shaders = "0.35"

b3 = { version = "0.1.0-alpha.1", path = "crates/b3" }
data = { version = "0.1.0-alpha.1", path = "crates/data" }
io = { version = "0.1.0-alpha.1", path = "crates/io" }
linalg = { version = "0.1.0-alpha.1", path = "crates/linalg" }
rng = { version = "0.1.0-alpha.1", path = "crates/rng" }
skvec = { version = "0.1.0-alpha.1", path = "crates/skvec" }
stats = { version = "0.1.0-alpha.1", path = "crates/stats" }
util = { version = "0.1.0-alpha.1", path = "crates/util" }

[profile.bench]
debug = true

[package]
name = "aspartik"
description = "Computational biology toolkit"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

b3 = { workspace = true }
data = { workspace = true }
io = { workspace = true }
rng = { workspace = true }
stats = { workspace = true }
