[project]
name = "aspartik"
# Uses square bracket generics (PEP 695)
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version", "author", "license"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "aspartik._aspartik_rust_impl"
features = ["pyo3/extension-module"]
