[package]
name = "b3"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base = { path = "../base" }
io = { path = "../io" }
linalg = { path = "../linalg", features = ["bytemuck"] }
shchurvec = { path = "../shchurvec" }

anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
statrs = { workspace = true }
vulkano = { workspace = true, features = ["macros"] }
vulkano-shaders = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[[bench]]
name = "likelihood"
harness = false
