[package]
name = "b3"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
data = { path = "../data" }
io = { path = "../io" }
linalg = { path = "../linalg", features = ["bytemuck"] }
rng = { path = "../rng" }
shchurvec = { path = "../shchurvec" }
util = { path = "../util" }

anyhow = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"] }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
vulkano = { workspace = true, features = ["macros"] }
vulkano-shaders = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[lib]
name = "b3"
crate-type = ["cdylib"]

[[bench]]
name = "likelihood"
harness = false
