[package]
name = "io"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
core = { path = "../core" }

anyhow = { workspace = true }
nom = { workspace = true }
petgraph = { workspace = true, default-features = false, features = ["stable_graph"] }
