[package]
name = "io"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
data = { path = "../data" }

anyhow = { workspace = true }
nom = { workspace = true }
petgraph = { workspace = true, default-features = false, features = ["stable_graph"] }
