[package]
name = "linalg"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

build = "build.rs"

[dependencies]
bytemuck = { workspace = true, optional = true }
lapack-sys = "0.14.0"
num-traits = { workspace = true }

[features]
bytemuck = ["dep:bytemuck"]
