[package]
name = "linalg"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytemuck = { workspace = true, optional = true }
lapack-sys = { workspace = true }
netlib-src = { workspace = true, default-features = false, features = ["static"] }
num-traits = { workspace = true }

[features]
bytemuck = ["dep:bytemuck"]
