[package]
name = "linalg"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

build = "build.rs"

[dependencies]
bytemuck = { workspace = true, optional = true }
lapack-sys = { workspace = true }
num-traits = { workspace = true }

[features]
bytemuck = ["dep:bytemuck"]
