[package]
name = "shchurvec"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true, features = ["small_rng"] }

[[bench]]
name = "double"
harness = false
