[project]
name = "stats"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "stats._stats_rust_impl"
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "../../"
venv = ".venv"
